Updates for item dates and info icons

--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/DiscountEdit.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/DiscountEdit.cshtml
@@ -8,7 +8,7 @@
 
 	ViewBag.Success = new SuccessAlert
 	{
-		ModelName = "Extra",
+		ModelName = "DiscountCode",
 		ReturnPath = "/admin/hotels/DiscountsList?hotelCode=" + hotelCode,
 		ReturnPathName = "Discounts List",
 		KeyPropertyLabel = "Discount Code",
