--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/DiscountEditRatePlansDisable.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/DiscountEditRatePlansDisable.cshtml
@@ -34,11 +34,13 @@
 
 <div id="page-info" style="display:none;">
 	<div data-info-for="info-special-rate-plans">
-		<span>DisabledRate Plans</span>
+		<span>Disabled Rate Plans</span>
 		<div>
 			<p>
-				Select the rate plans for which this room type cannot be used.
+				A list of rate plans that cannot be used with this discount. This might be the case for some specific rate plans that already have discounts applied.
 			</p>
+			<p>Set the checkbox for each rate plan you want to be excluded.</p>
+			<p>If no rate plans are added, the discount is available with all rate plans.</p>
 		</div>
 	</div>
 </div>
