--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/DiscountEditRatePlansEnable.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/DiscountEditRatePlansEnable.cshtml
@@ -37,8 +37,10 @@
 		<span>Enabled Rate Plans</span>
 		<div>
 			<p>
-				Select the rate plans ....
+				A list of rate plans that can be used with this discount. This might be the case for some specific discount that applies to a particular rate plan or set of rate plans.
 			</p>
+			<p>Set the checkbox for each rate plan you want to be included.</p>
+			<p>If no rate plans are added, the discount is available with all rate plans.</p>
 		</div>
 	</div>
 </div>
