--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/ExtrasList.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/ExtrasList.cshtml
@@ -35,27 +35,29 @@
 
 <div id="page-info" style="display:none;">
 	
-	
+	@await Html.PartialAsync("Hotels/_ListIconsInfo")
 	
 	<div data-info-for="info-extras">
 		<span>Extras List</span>
 		<div>
-			<p>The list shows the Extras (representing Opera Packages) for the selected hotel.</p>
-			<p>The icons in the table are used to perform actions on the table.</p>
-			<p>Use the bulk action checkboxes to bulk copy or bulk delete rows - 
-				the bulk action buttons are exposed if any checkbox is set.
+			<p>A list of Extras (representing Opera Packages) available for the selected hotel.</p>
+			<p>
+				Click here to see the standard table icons: <info-icon name="info-icons" />
 			</p>
-			@await Html.PartialAsync("Hotels/_ListIconsInfo")
+			<p>Column icons specific to this list are used to edit the properties that contain more details than a single field:</p>
+			<ul>
+				
+				<li>
+					<p><strong>Dates</strong> - A list of dates when the Extra applies.</p>
+					<p>If this list is empty the Extra is available any time.</p>
+				</li>
+				
+			</ul>
+			
 		</div>
 		
 	</div>
 
-	<div data-info-for="info-hotel-code">
-		<span>@ViewBag.InfoIcons Hotel</span>
-		<div>
-			<p>Select a hotel to view @ViewBag.InfoIcons for that hotel</p>
-		</div>
-	</div>
 </div>
 
 @section Scripts{
