--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_DiscountsTable.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_DiscountsTable.cshtml
@@ -14,17 +14,17 @@
 				</div>
 				<div class="cell-inner">
 					<a href="javascript:window.mshMethods.sortList('@Model.HotelCode')">
-						<i class="fa-solid fa-sort"></i>
+						<i class="fa-solid fa-arrow-up"></i>
 					</a>
 				</div>
 			</div>
 		</th>
-		<th>Enabled</th>
+		<th class="text-center">Enabled</th>
 		<th>Description</th>
-		<th>E Plans</th>
-		<th>D Plans</th>
-		<th>Offers</th>
-		<th>Book</th>
+		<th class="text-center">Enabled Plans</th>
+		<th class="text-center">Disabled Plans</th>
+		<th class ="text-center">Offer Dates</th>
+		<th class="text-center">Book Dates</th>
 		<th class="text-center" style="width:40px;">Move</th>
 		<th>
 			<div class="cell-outer">
