--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_RoomTypesTable.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_RoomTypesTable.cshtml
@@ -17,7 +17,7 @@
 			</div>
 			<div class="cell-inner">
 				<a href="javascript:window.mshMethods.sortList('@Model.HotelCode')">
-					<i class="fa-solid fa-sort"></i>
+						<i class="fa-solid fa-arrow-up"></i>
 				</a>
 			</div>
 		</div>
