--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_DiscountEdit.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_DiscountEdit.cshtml
@@ -30,6 +30,27 @@
 				@await Html.PartialAsync("Hotels/_EditCode", success)
 			</div>
 			
+			<div class="form-group mb-3">
+				<label asp-for="DiscountType" class="control-label"></label>&nbsp;
+				<info-icon name="info-item-type" />
+				<select asp-for="DiscountType" class="form-control" asp-items="Html.GetEnumSelectList<DiscountTypes>()"></select>
+				<span asp-validation-for="DiscountType" class="text-danger"></span>
+			</div>
+			
+			<div class="form-group mb-3">
+				<label asp-for="Description" class="control-label"></label>&nbsp;
+				<info-icon name="info-discription" />
+				<input asp-for="Description" class="form-control " />
+				<span asp-validation-for="Description" class="text-danger"></span>
+			</div>
+
+			<div class="form-group mb-3">
+				<label asp-for="Details" class="control-label"></label>&nbsp;
+				<info-icon name="info-details" />
+				<textarea asp-for="Details" class="form-control" rows="3"></textarea>
+				<span asp-validation-for="Details" class="text-danger"></span>
+			</div>
+			
 			<div class="form-group form-switch mb-3">
 				<input asp-for="Enabled" type="checkbox" class="form-check-input " />
 				<label asp-for="Enabled" class="form-check-label"></label>&nbsp;
@@ -42,12 +63,7 @@
 				<info-icon name="info-selectable" />
 			</div>
 			
-			<div class="form-group mb-3">
-				<label asp-for="DiscountType" class="control-label"></label>&nbsp;
-				<info-icon name="info-item-type" />
-				<select asp-for="DiscountType" class="form-control" asp-items="Html.GetEnumSelectList<DiscountTypes>()"></select>
-				<span asp-validation-for="DiscountType" class="text-danger"></span>
-			</div>
+			
 
 
 			<div class="form-group mb-3">
@@ -90,20 +106,7 @@
 			</div>
 
 
-			<div class="form-group mb-3">
-				<label asp-for="Description" class="control-label"></label>&nbsp;
-				<info-icon name="info-discription" />
-				<input asp-for="Description" class="form-control " />
-				<span asp-validation-for="Description" class="text-danger"></span>
-			</div>
-
-
-			<div class="form-group mb-3">
-				<label asp-for="Details" class="control-label"></label>&nbsp;
-				<info-icon name="info-details" />
-				<input asp-for="Details" class="form-control " />
-				<span asp-validation-for="Details" class="text-danger"></span>
-			</div>
+			
 
 
 			<div class="form-group mb-3">
@@ -142,12 +145,11 @@
 				<input asp-for="MinTotal" class="form-control " />
 				<span asp-validation-for="MinTotal" class="text-danger"></span>
 			</div>
-
-
+			
 			<div class="form-group mb-3">
 				<label asp-for="MinTotalMessage" class="control-label"></label>&nbsp;
 				<info-icon name="info-min-total-message" />
-				<input asp-for="MinTotalMessage" class="form-control " />
+				<textarea asp-for="MinTotalMessage" class="form-control" rows="3"></textarea>
 				<span asp-validation-for="MinTotalMessage" class="text-danger"></span>
 			</div>
 
@@ -173,7 +175,7 @@
 			<div class="form-group mb-3">
 				<label asp-for="Notes" class="control-label"></label>&nbsp;
 				<info-icon name="info-notes"/>
-				<textarea asp-for="Notes" class="form-control"></textarea>
+				<textarea asp-for="Notes" class="form-control" rows="3"></textarea>
 				<span asp-validation-for="Notes" class="text-danger"></span>
 			</div>
 			
