--- a/solution/Msh/Msh.WebApp/Views/Shared/Admin/_AdminSaveSuccess.cshtml
+++ b/solution/Msh/Msh.WebApp/Views/Shared/Admin/_AdminSaveSuccess.cshtml
@@ -5,9 +5,14 @@
 
 @if (@isSuccess)
 {
-	<div class="alert alert-success alert-dismissible fade show" role="alert">
+	<input type="hidden" id="is-success" value ="true"/>
+	<div id="success-alert" class="alert alert-success alert-dismissible fade show" role="alert">
 		<strong>Success!</strong> You have saved the @Model.ModelName.<br/>
 		<a href="@Model.ReturnPath">Return to @Model.ReturnPathName</a>
 		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 	</div>
+}
+else
+{
+	<input type="hidden" id="is-success" value="false" />
 }
