--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_DiscountEditOneTime.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_DiscountEditOneTime.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+@using Msh.Common.Models.OwsCommon
 @using Msh.HotelCache.Models.Discounts
 @using Msh.WebApp.Models.Admin
 @using Msh.WebApp.TagHelpers
