Add OWS SchemaMap editing

--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Ows/OwsConfigEdit.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Ows/OwsConfigEdit.cshtml
@@ -20,7 +20,7 @@
 <div class="text-center">
 	<h1 class="display-6">@title</h1>
 	<p>Edit the main OWS Config properties</p>
-	<p><a asp-controller="Ows" asp-action="Index">Index</a></p>
+	<p><a asp-controller="Ows" asp-action="OwsConfigEditMap">Schema Maps</a></p>
 </div>
 
 
