--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelList.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelList.cshtml
@@ -27,6 +27,14 @@
 
 @await Html.PartialAsync("Hotels/_BulkCopyDelButtons", "")
 
+<div class="mt-3" style="display:flex;justify-content:start;">
+	<div class="input-group">
+		<button id="publish-hotels" class="btn btn-outline-primary" class="mr-3">Publish</button>
+		<a asp-contoller="Hotels" asp-action="Index" class="btn btn-outline-secondary">Return to dashboard</a>
+	</div>
+
+</div>
+
 @await Html.PartialAsync("Admin/_AdminErrorBlock", "")
 
 <div id="page-info" style="display:none;">
