--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelList.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelList.cshtml
@@ -29,7 +29,7 @@
 
 <div class="mt-3" style="display:flex;justify-content:start;">
 	<div class="input-group">
-		<button id="publish-hotels" class="btn btn-outline-primary" class="mr-3">Publish</button>
+		<button class="btn btn-outline-primary" class="mr-3" onclick="window.mshMethods.publishHotels()">Publish</button>
 		<a asp-contoller="Hotels" asp-action="Index" class="btn btn-outline-secondary">Return to dashboard</a>
 	</div>
 
