--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelList.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelList.cshtml
@@ -30,6 +30,7 @@
 <div class="mt-3" style="display:flex;justify-content:start;">
 	<div class="input-group">
 		<button class="btn btn-outline-primary" class="mr-3" onclick="window.mshMethods.publishHotels()">Publish</button>
+		<button class="btn btn-outline-primary" class="mr-3" onclick="window.mshMethods.archiveHotels()">Archive</button>
 		<button class="btn btn-outline-primary" class="mr-3" onclick="window.mshMethods.loadHotels()">Load</button>
 		<a asp-contoller="Hotels" asp-action="Index" class="btn btn-outline-secondary">Return to dashboard</a>
 	</div>
