--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelList.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelList.cshtml
@@ -1,10 +1,20 @@
 ﻿@using Msh.Admin.Models.Const
 @using Msh.HotelCache.Models.Hotels
+@using Msh.WebApp.Areas.Admin.Models
 @model List<Hotel>;
 @{
 	var title = "Hotel List";
 	ViewData["Title"] = title;
 	ViewBag.InfoIcons = "Hotels";
+	var pallModel = new PublishArchiveLoadLockVm
+	{
+		OnclickPublish = "window.mshMethods.publishHotels()",
+		OnclickArchive = "window.mshMethods.archiveHotels()",
+		OnclickLoad = "window.mshMethods.loadHotels()",
+		OnclickLock = "window.mshMethods.lockHotels()",
+		Controller = "Hotels",
+		Action = "Index"
+	};
 }
 
 @await Component.InvokeAsync("AdminMenu", new { menuName = AdminConst.MenuHotels, currentItem = "HotelList" })
@@ -27,15 +37,7 @@
 
 @await Html.PartialAsync("Hotels/_BulkCopyDelButtons", "")
 
-<div class="mt-3" style="display:flex;justify-content:start;">
-	<div class="input-group">
-		<button class="btn btn-outline-primary" class="mr-3" onclick="window.mshMethods.publishHotels()">Publish</button>
-		<button class="btn btn-outline-primary" class="mr-3" onclick="window.mshMethods.archiveHotels()">Archive</button>
-		<button class="btn btn-outline-primary" class="mr-3" onclick="window.mshMethods.loadHotels()">Load</button>
-		<a asp-contoller="Hotels" asp-action="Index" class="btn btn-outline-secondary">Return to dashboard</a>
-	</div>
-
-</div>
+@await Html.PartialAsync("_PublishArchiveLoadLock", pallModel)
 
 @await Html.PartialAsync("Admin/_AdminErrorBlock", "")
 
