Fix controller route and import

--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/DiscountsList.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/DiscountsList.cshtml
@@ -14,8 +14,8 @@
 		OnclickArchive = "window.mshMethods.archiveDiscounts()",
 		OnclickLoad = "window.mshMethods.loadDiscounts()",
 		OnclickLock = "window.mshMethods.lockDiscounts()",
-		Controller = "Hotels",
-		Action = "Index"
+		ReturnController = "Hotels",
+		ReturnAction = "Index"
 	};
 }
 
