--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelList.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelList.cshtml
@@ -12,8 +12,8 @@
 		OnclickArchive = "window.mshMethods.archiveHotels()",
 		OnclickLoad = "window.mshMethods.loadHotels()",
 		OnclickLock = "window.mshMethods.lockHotels()",
-		Controller = "Hotels",
-		Action = "Index"
+		ReturnController = "Hotels",
+		ReturnAction = "Index"
 	};
 }
 
