--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/_PublishArchiveLoadLock.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/_PublishArchiveLoadLock.cshtml
@@ -5,14 +5,18 @@
 	var loadMethod = Model.OnclickLoad;
 	var lockMethod = Model.OnclickLock;
 	var archiveMethod = Model.OnclickArchive;
-}
+}	
 																								
-<div class="mt-3" style="display:flex;justify-content:start;">
+<div class="mt-3 sticky-bottom" style="display:flex;justify-content:start;width:100%;">
 	<div class="input-group">
+		@if (Model.IncludeSave)
+		{
+			<button type="submit" name="Command" value="Save" class="btn btn-outline-primary">Save</button>
+		}
 		<button class="btn btn-outline-primary" class="mr-3" onclick="@publishMethod">Publish</button>
 		<button class="btn btn-outline-primary" class="mr-3" onclick="@archiveMethod">Archive</button>
 		<button class="btn btn-outline-primary" class="mr-3" onclick="@loadMethod">Load</button>
 		<button class="btn btn-outline-primary" class="mr-3" onclick="@lockMethod">Lock</button>
-		<a asp-contoller="@Model.Controller" asp-action="@Model.Action" class="btn btn-outline-secondary">Dashboard</a>
+		<a asp-contoller="@Model.ReturnController" asp-action="@Model.ReturnAction" class="btn btn-outline-secondary">Dashboard</a>
 	</div>
 </div>
